# INVESTRA-GOVERMENT

./: CLAUDE.md  RUN_DOCKER.md  WORKFLOW.md  docker-compose.yml
.githooks/: README.md  pre-commit  pre-push
docs/: usecase-diagram.puml  walkthrough.html  walkthrough.md
investra-gov-apps-be/: .dockerignore  .env.example  .gitignore  Dockerfile  GenerateSuperAdmin.py  README.md  Wsgi.py  docker-compose.yml  generate_super_admin.py  pyproject.toml  rename_map.json  requirements.txt
investra-gov-apps-be/app/: Config.py  Extensions.py  __init__.py
investra-gov-apps-be/app/api/: Analysis.py  Auth.py  Dashboard.py  Dataset.py  Health.py  Users.py  public.py
investra-gov-apps-be/app/cli/: __init__.py  seed.py
investra-gov-apps-be/app/controllers/: AnalysisController.py  AuthController.py  DashboardController.py  DatasetController.py  UserController.py  analysis_controller.py  auth_controller.py  dashboard_controller.py  dataset_controller.py  public_controller.py  user_controller.py
investra-gov-apps-be/app/middleware/: Auth.py  ErrorHandler.py  __init__.py  error_handler.py
investra-gov-apps-be/app/models/: AnalysisResult.py  Dataset.py  Province.py  User.py  __init__.py  analysis_result.py
investra-gov-apps-be/app/services/: AnalysisService.py  PolicyService.py  analysis_service.py  policy_service.py
investra-gov-apps-be/app/setup/: __init__.py  blueprints.py  cors.py  logging.py  request_context.py  security_headers.py
investra-gov-apps-be/app/utils/: ApiResponse.py  CaseConverter.py  PublicIdentifier.py  RequestParser.py  api_response.py  case_converter.py  public_identifier.py  request_parser.py
investra-gov-apps-be/migrations/versions/: 96751a710f36_init.py  a2f1e7c9b4d1_database_hardening_constraints.py  b7c4f1e92d3a_public_uuid_and_codes.py  c9d2e84a1f07_uuid_primary_keys.py  d1f0c7a8e2b4_support_panel_dataset_year_uniqueness.py
investra-gov-apps-be/postman/: InvestraGovAPI.postman_collection.json  InvestraLocal.postman_environment.json
investra-gov-apps-be/scripts/: _libcst_smoke.py  flatten_controllers.py  rename_camel_to_snake.py
investra-gov-apps-be/tests/: conftest.py  test_auth.py  test_auth_flow.py  test_dataset.py  test_dataset_flow.py  test_smoke.py
investra-gov-apps-data-prep/: .gitignore  README.md  requirements.txt
investra-gov-apps-data-prep/notebooks/: 01_Preprocess_Investra.ipynb  02_Build_Panel_From_Raw.ipynb
investra-gov-apps-data-prep/templates/: Manual_KMeans_Policy_Template.xlsx  README_Manual_KMeans_Policy_Template.md
investra-gov-apps-fe/: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
investra-gov-apps-fe/.claude/: settings.json
investra-gov-apps-fe/.claude/hooks/: prettier-format.sh  (+1 more)
investra-gov-apps-fe/src/: App.tsx  main.tsx
(+129 files in other folders)
